@@ -11,9 +11,7 @@
           <div class="page-header">
             <h1>
               <a id="menu-toggle" ng-click="toggleSidebar()" class="btn btn-default"><i class="fa fa-bars"></i></a>
-              <span ng-show="table.schema_name == 'doc'">{{table.name}}</span>
-              <span ng-show="table.schema_name == 'blob'">BLOB: {{table.name}}</span>
-              <span ng-show="table.schema_name != 'blob' && table.schema_name != 'doc'">{{table.schema_name}}.{{table.name}}</span>
+              <span>{{table_label}}</span>
             </h1>
           </div>
         </div>
