@@ -5,6 +5,8 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - fixed title of `tables` view if no tables exists or connection is down
+
 2014/12/16 0.11.0
 =================
 
